GTT-1497: Added table of contents (#560)
* added table of contents for dashboard view and dashbaord preview

* updated unit tests

* added licenses for react-waypoint and react-router-hash-link

* fixed code style

* position TOB higher on public dashboard view

* position TOB higher on dashboard preview

* forcefully highlight the last content item when reaching the bottom of page

* cleaned up code
