# backend/src/lib/controllers/dashboard-ctrl.ts
@@ -131,7 +131,8 @@ async function getVersions(req: Request, res: Response) {
 async function updateDashboard(req: Request, res: Response) {
   const user = req.user;
   const { id } = req.params;
-  const { name, topicAreaId, description, updatedAt } = req.body;
+  const { name, topicAreaId, displayTableOfContents, description, updatedAt } =
+    req.body;
 
   if (!name) {
     res.status(400).send("Missing required body `name`");
@@ -167,6 +168,7 @@ async function updateDashboard(req: Request, res: Response) {
     name,
     topicAreaId,
     topicArea.name,
+    displayTableOfContents,
     description,
     updatedAt,
     user
